# llguidance

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: rust.yml  wheels.yml
docs/: fast_forward.md  json_schema.md  optimizations.md  syntax.md  toktrie.md
json_stats/: Cargo.toml  expected_maskbench.json  jstats.sh
json_stats/scripts/: kill_xgr.sh  split-stats.sh  split_plot.py
json_stats/scripts/xgr/: llg_test.py  run_many.py  xgr_combine.py  xgr_multi.py  xgr_test.py
json_stats/src/: json_stats.rs  stats.rs
parser/: Cargo.toml  build.rs  llguidance.h
parser/src/: api.rs  constraint.rs  factory.rs  ffi.rs  ffi_par.rs  grammar_builder.rs  lib.rs  output.rs  panic_utils.rs  stop_controller.rs  substring.rs  tokenizer_json.rs  tokenparser.rs
parser/src/earley/: from_guidance.rs  grammar.rs  lexer.rs  lexerspec.rs  mod.rs  parser.rs  perf.rs  regexvec.rs  slicer.rs
parser/src/json/: compiler.rs  context_ref.rs  mod.rs  numeric.rs  schema.rs  shared_context.rs
parser/src/lark/: README.md  ast.rs  compiler.rs  lexer.rs  parser.rs
python/llguidance/: __init__.py  _lib.pyi  _tokenizer.py  cli.py  gbnf_to_lark.py  hf.py  mlx.py  numpy.py  torch.py
python/torch_tests/: __init__.py  test_bitmask.py  test_hf.py
python_ext/: Cargo.toml
python_ext/src/: py.rs
sample_parser/: Cargo.toml  cli.sh  gtest.sh  lark.sh  run.sh
sample_parser/data/: blog.schema.ll.json
sample_parser/data/from-llama.cpp/: README.md
sample_parser/src/: json_schema_testsuite.rs  lib.rs  minimal.rs  sample_parser.rs
sample_parser/tests/: test_lark.rs  test_ll.rs  test_raw_parser.rs  test_stop.rs
scripts/: bump.py  cbindgen.sh  checklinks.py  checklinks.sh  ci-publish.py  disasm.sh  gbnf_to_lark.py  install-deps.sh  rust_size.py  test-guidance.sh  tokenizer_test.py  update-git.py
toktrie/: Cargo.toml  README.md
toktrie/src/: bytes.rs  lib.rs  recognizer.rs  svob.rs  toktree.rs
toktrie/tests/: test_svob.rs
toktrie_hf_tokenizers/: Cargo.toml
toktrie_hf_tokenizers/src/: lib.rs
