[package]
name = "json_stats"
version = "0.1.0"
edition = "2021"
default-run = "json_stats"

[dependencies]
llguidance = { workspace = true }
toktrie_hf_tokenizers = { workspace = true }
anyhow = "1.0.95"
lazy_static = "1.5.0"
serde_json = { version = "1.0.138", features = ["preserve_order"] }
serde = { version = "1.0.217", features = ["derive"] }
rayon = "1.10.0"
jsonschema = "0.29.0"
clap = { version = "4.5.28", features = ["derive"] }
regex = "1.11.1"
ahash = "0.8.11"
indexmap = { version = "2.7.1", features = ["serde"] }
# ring = "0.17.8"
# bytemuck = "1.21.0"
# sha2 = { version = "0.10.8", features = ["asm", "asm-aarch64"] }

[[bin]]
name = "json_stats"
path = "src/json_stats.rs"
