[package]
name = "llguidance"
version = "0.6.17"
edition = "2021"
license = "MIT"
description = "Super-fast Structured Outputs"
repository = "https://github.com/guidance-ai/llguidance"

[dependencies]
toktrie = { workspace = true }
derivre = { version = "=0.2.0" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
anyhow = "1.0.95"
instant = "0.1.13"
jsonschema = { version = "0.28.3", default-features = false, optional = true }
url = "2.5.4"
lazy_static = { version = "1.5.0", optional = true }
regex-syntax = "0.8.5"
indexmap = "2.7.1"
referencing = "0.28.3"
rayon = { version = "1.10.0", optional = true }
hashbrown = { version = "0.15.2", features = ["serde"] }

[features]
default = ["lark", "rayon"]
logging = []                                                  # this is extensive debug logging
lark = []                                                     # ~115k (binary)
jsonschema_validation = ["dep:jsonschema", "dep:lazy_static"] # ~2.5M (binary)
rayon = ["dep:rayon"]

[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[build-dependencies]
cbindgen = "0.28.0"

[dev-dependencies]
regex = "1.11.1"
