[package]
name = "toktrie"
version = "0.6.16"
edition = "2021"
license = "MIT"
description = "LLM Token Trie library"
repository = "https://github.com/guidance-ai/llguidance"

[lib]
name = "toktrie"

[dependencies]
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
anyhow = "1.0.75"
bytemuck = "1.19.0"
bytemuck_derive = "1.8.0"
hashbrown = "0.15.2"
